--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "nedb": "^1.8.0"
+  },
+  "devDependencies": {
+    "frisbee": "^1.1.4",
+    "isomorphic-fetch": "^2.2.1"
   }
 }
